event-processing/src/main/antlr4/Query.g4
grammar Query;

@header {
	package event.processing.query.language;
}

query: conditions domains? window?;

window: WS 'WIN.TIME(' WS? INT WS? ')' | WS 'WIN.LENGTH(' WS? INT WS? ')';

domains: (WS 'FROM' WS domain);

domain: domainName | domain WS? COMMA WS? domain;

domainName: VARIABLE;

conditions: 'CONDITION' WS condition;

condition: singleCondition | compositeCondition | aggregateCondition;

singleCondition: evaluation;

compositeCondition: compositeOperationSingleDigit | compositeOperationDoubleDigit;

compositeOperationSingleDigit: compositeFunctionSingleDigit WS evaluation;

compositeFunctionSingleDigit: 'NOT'; 

compositeOperationDoubleDigit: evaluation WS compositeFunctionDoubleDigit WS evaluation;

compositeFunctionDoubleDigit: ('AND' | 'OR'); 

aggregateCondition: aggregateOperation WS? operator WS? INT | INT WS? operator WS? aggregateOperation;

aggregateOperation: aggregateFunction WS? '(' WS? VARIABLE WS? ')'; 

aggregateFunction: ('SUM' | 'AVG' | 'COUNT' | 'MAX' | 'MIN');

evaluation: property WS? operator WS? property;

property: (VARIABLE | STRING | INT);

operator: ('=' | '<' | '>' | '<=' | '>=');

VARIABLE: ('A'..'Z' | 'a'..'z' | '-' | '_' )+;
STRING: '\'' ('A'..'Z' | 'a'..'z')+ '\'';
INT: ('0'..'9')+;

COMMA: (',')+;
WS: (' ' | '\t')+;
NL:  '\r'? '\n';
